--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,14 +2,9 @@
   "version": "0.1.0",
   "configurations": [
       {
-          "type": "browser-preview",
-          "request": "attach",
-          "name": "Browser Preview: Attach"
-      },
-      {
-          "type": "browser-preview",
+          "type": "chrome",
           "request": "launch",
-          "name": "Browser Preview: Launch",
+          "name": "ng serve",
           "url": "http://localhost:3000"
       }
   ]
